syntax = "proto3";

option go_package = "api/";
package userproto;

service CustomerService{
    rpc CreateUser(Customer)returns (resCustomer);
    rpc GetUser(CustomerId)returns(resCustomer);
    rpc DeleteUSer(CustomerId) returns(resDeletedUser);

}
message resCustomer {
    string name=1;
    string email=3;
    repeated string todo=4;
}
message resDeletedUser{
    string email=1;
    string id=2;
    string message=3;
}
message CustomerId{
    string Id =1;
}
message Customer{
    string name=1;
    string email=2;
    string password=3;
}
message getUser{
    string id=1;
}
service TodoService{
    rpc CreateTodo(Todo) returns(resTodo);
    rpc AddNewToto(Todo) returns(resTodo);
    rpc GetTodo(CustomerId) returns(resTodo);
    rpc DeleteTodo(removeTodo) returns(resDeleteTodo);
    rpc DeleteAllTodo(CustomerId) returns(resDeleteTodo);
}
message resDeleteTodo{
    string  Title=1;
    string message=2;
}
message Todo{
    repeated string Title=1;
    string CustomerId=2;
}
message resTodo {
    repeated string Title=1;
    string CustomerId=2;
}
message removeTodo{
    repeated string Title=1;
    string CustomerId=2; 
}
